Migrate code to Java 17
Run openrewrite [recipe](https://docs.openrewrite.org/running-recipes/popular-recipe-guides/migrate-to-java-17#example-configuration)