@@ -11,7 +11,6 @@ import java.io.ByteArrayInputStream;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.StandardCopyOption;
 import java.util.*;
 import java.util.stream.Collectors;
@@ -59,7 +58,7 @@ public class WanxHelper {
             }
         }
 
-        Path tmpFilePath = Paths.get(tmpDir, tmpFileName);
+        Path tmpFilePath = Path.of(tmpDir, tmpFileName);
         byte[] data = Base64.getDecoder().decode(base64Data);
         try {
             Files.copy(new ByteArrayInputStream(data), tmpFilePath, StandardCopyOption.REPLACE_EXISTING);
