@@ -90,7 +90,7 @@ public class DefaultOvhAiClient extends OvhAiClient {
     private static RuntimeException toException(retrofit2.Response<?> response) throws IOException {
         int code = response.code();
         String body = response.errorBody().string();
-        String errorMessage = String.format("status code: %s; body: %s", code, body);
+        String errorMessage = "status code: %s; body: %s".formatted(code, body);
         return new RuntimeException(errorMessage);
     }
 }
