@@ -81,26 +81,26 @@ class PgVectorEmbeddingStore029 implements EmbeddingStore<TextSegment> {
         try (Connection connection = setupConnection()) {
 
             if (dropTableFirst) {
-                connection.createStatement().executeUpdate(String.format("DROP TABLE IF EXISTS %s", table));
+                connection.createStatement().executeUpdate("DROP TABLE IF EXISTS %s".formatted(table));
             }
 
             if (createTable) {
-                connection.createStatement().executeUpdate(String.format(
+                connection.createStatement().executeUpdate((
                         "CREATE TABLE IF NOT EXISTS %s (" +
                                 "embedding_id UUID PRIMARY KEY, " +
                                 "embedding vector(%s), " +
                                 "text TEXT NULL, " +
                                 "metadata JSON NULL" +
-                                ")",
+                                ")").formatted(
                         table, ensureGreaterThanZero(dimension, "dimension")));
             }
 
             if (useIndex) {
                 final String indexName = table + "_ivfflat_index";
-                connection.createStatement().executeUpdate(String.format(
+                connection.createStatement().executeUpdate((
                         "CREATE INDEX IF NOT EXISTS %s ON %s " +
                                 "USING ivfflat (embedding vector_cosine_ops) " +
-                                "WITH (lists = %s)",
+                                "WITH (lists = %s)").formatted(
                         indexName, table, ensureGreaterThanZero(indexListSize, "indexListSize")));
             }
         } catch (SQLException e) {
@@ -110,7 +110,7 @@ class PgVectorEmbeddingStore029 implements EmbeddingStore<TextSegment> {
 
     private Connection setupConnection() throws SQLException {
         Connection connection = DriverManager.getConnection(
-                String.format("jdbc:postgresql://%s:%s/%s", host, port, database),
+                "jdbc:postgresql://%s:%s/%s".formatted(host, port, database),
                 user,
                 password
         );
@@ -200,8 +200,7 @@ class PgVectorEmbeddingStore029 implements EmbeddingStore<TextSegment> {
         List<EmbeddingMatch<TextSegment>> result = new ArrayList<>();
         try (Connection connection = setupConnection()) {
             String referenceVector = Arrays.toString(referenceEmbedding.vector());
-            String query = String.format(
-                    "WITH temp AS (SELECT (2 - (embedding <=> '%s')) / 2 AS score, embedding_id, embedding, text, metadata FROM %s) SELECT * FROM temp WHERE score >= %s ORDER BY score desc LIMIT %s;",
+            String query = "WITH temp AS (SELECT (2 - (embedding <=> '%s')) / 2 AS score, embedding_id, embedding, text, metadata FROM %s) SELECT * FROM temp WHERE score >= %s ORDER BY score desc LIMIT %s;".formatted(
                     referenceVector, table, minScore, maxResults);
             PreparedStatement selectStmt = connection.prepareStatement(query);
 
@@ -250,12 +249,12 @@ class PgVectorEmbeddingStore029 implements EmbeddingStore<TextSegment> {
                 "embeddings size is not equal to embedded size");
 
         try (Connection connection = setupConnection()) {
-            String query = String.format(
+            String query = (
                     "INSERT INTO %s (embedding_id, embedding, text, metadata) VALUES (?, ?, ?, ?)" +
                             "ON CONFLICT (embedding_id) DO UPDATE SET " +
                             "embedding = EXCLUDED.embedding," +
                             "text = EXCLUDED.text," +
-                            "metadata = EXCLUDED.metadata;",
+                            "metadata = EXCLUDED.metadata;").formatted(
                     table);
 
             PreparedStatement upsertStmt = connection.prepareStatement(query);
